[🦗] Bug import fix + ORM, implementation for cars
