# src/swagger.json
@@ -1,145 +1,145 @@
 {
-   "openapi": "3.0.0",
-   "info": {
-     "title": "RentX Documentation",
-     "description": "This is an API Rent",
-     "version": "1.0.1",
-     "contact": {
-       "email": "https://github.com/andregda"
-     }
-   },
-   "paths": {
-     "/categories": {
-       "post": {
-         "tags": ["Category"],
-         "summary": "Create a New Category",
-         "description": "Create a New Category",
-         "requestBody": {
-           "content": {
-             "application/json": {
-               "schema": {
-                 "type": "object",
-                 "properties": {
-                   "name": {
-                     "type": "string"
-                   },
-                   "description": {
-                     "type": "string"
-                   }
-                 },
-                 "example": {
-                   "name": "Category Name Sample",
-                   "description": "Category Description Sample"
-                 }
-               }
-             }
-           }
-         },
-         "responses": {
-           "201": {
-             "description": "Created Successfully"
-           },
-           "500": {
-             "description": "Category Already Exists"
-           }
-         }
-       },
-       "get": {
-         "tags": ["Category"],
-         "summary": "List All Categories",
-         "description": "List All Categories",
-         "responses": {
-           "200": {
-             "description": "Success",
-             "content": {
-               "application/json" : {
-                 "schema": {
-                   "type": "array",
-                   "items": {
-                     "type": "object",
-                     "properties": {
-                       "id": {
-                         "type": "string"
-                       },
-                       "name": {
-                         "type": "string"
-                       },
-                       "description": {
-                         "type": "string"
-                       },
-                       "created_at": {
-                         "type": "string"
-                       }
-                     }
-                   }
-                 }
-               }
-             }
-           }
-         }
-       }
-     },
-     "/categories/import": {
-       "post": {
-         "tags": ["Category"],
-         "summary": "Upload a New Category",
-         "description": "Upload a New Category",
-         "requestBody": {
-           "content": {
-             "multipart/form-data": {
-               "schema": {
-                 "type": "object",
-                 "properties" : {
-                   "file": {
-                     "type": "string",
-                     "format": "binary"
-                   }
-                 }
-               }
-             }
-           }
-         },
-         "responses": {
-           "201": "Created"
-         }
-       }
-     },
-     "/specifications": {
-       "post": {
-         "tags": ["Specifications"],
-         "summary": "Create a Specification",
-         "description": "Create a New Specification",
-         "requestBody": {
-           "content": {
-             "application/json": {
-               "schema" : {
-                 "$ref" : "#/definitions/Specifications"
-               }
-             }
-           }
-         },
-         "responses": {
-           "201": {
-             "description": "Created successfully"
-           },
-           "500": {
-             "description": "Specifications Already Exist."
-           }
-         }
-       }
-     }
-   },
-   "definitions": {
-     "Specifications": {
-       "type": "object",
-       "properties": {
-         "name": {
-           "type": "string"
-         },
-         "description": {
-           "type": "string"
-         }
-       }
-     }
-   }
- }
+  "openapi": "3.0.0",
+  "info": {
+    "title": "RentX Documentation",
+    "description": "This is an API Rent",
+    "version": "1.0.1",
+    "contact": {
+      "email": "https://github.com/andregda"
+    }
+  },
+  "paths": {
+    "/categories": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Create a New Category",
+        "description": "Create a New Category",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  }
+                },
+                "example": {
+                  "name": "Category Name Sample",
+                  "description": "Category Description Sample"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created Successfully"
+          },
+          "500": {
+            "description": "Category Already Exists"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Category"],
+        "summary": "List All Categories",
+        "description": "List All Categories",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string"
+                      },
+                      "name": {
+                        "type": "string"
+                      },
+                      "description": {
+                        "type": "string"
+                      },
+                      "created_at": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/categories/import": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a New Category",
+        "description": "Upload a New Category",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": "Created"
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specifications"],
+        "summary": "Create a Specification",
+        "description": "Create a New Specification",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Specifications"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created successfully"
+          },
+          "500": {
+            "description": "Specifications Already Exist."
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specifications": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    }
+  }
+}
